Currently, we are caching the default favicon, but the scale factor is ignored. So we need to remove this in order to take the required scale factor into account.

BUG=668023

Review-Url: https://codereview.chromium.org/2535463002
Cr-Commit-Position: refs/heads/master@{#436237}

Former-commit-id: 47fcdcbb580f9077c0b484ffc43a01f71960e06a