chrome/browser/ui/webui/favicon_source.h
@@ -127,10 +127,6 @@ class FaviconSource : public content::URLDataSource {
 
   base::CancelableTaskTracker cancelable_task_tracker_;
 
-  // Raw PNG representations of favicons of each size to show when the favicon
-  // database doesn't have a favicon for a webpage. Indexed by IconSize values.
-  scoped_refptr<base::RefCountedMemory> default_favicons_[NUM_SIZES];
-
   // The favicon_base::IconTypes of icon that this FaviconSource handles.
   int icon_types_;
 
